Fix sticky header bottom alignment

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 .columns__title__text {
   font-size: 24px;
   font-weight: 600;
-  margin: 0  0 20px 0;
+  margin: 0 0 20px 0;
 }
 
 .content__image {
@@ -194,12 +194,12 @@ body {
   }
   .columns__title {
     width: 30%;
-    margin-bottom: 20px;
   }
   .columns__title__text {
     position: -webkit-sticky;
     position: sticky;
     top: 10px;
+    margin-bottom: 0;
   }
   .columns__list {
     width: 65%;
